ACLOCAL_AMFLAGS = -I m4 --force

lib_LTLIBRARIES = pagecache-engine.la

pagecache_engine_la_CFLAGS = ${NO_ERROR}
pagecache_engine_la_CXXFLAGS = ${NO_ERROR}
pagecache_engine_la_LDFLAGS = -module -dynamic
pagecache_engine_la_SOURCES = \
                 src/pagecache_engine.c src/pagecache_engine.h \
                 src/assoc.c src/assoc.h src/items.c src/items.h

